# haskelRepo

hw5/: hw5-csv-lens.cabal  test.csv
hw5/app/: Main.hs
hw5/src/: CSVParser.hs  ParsingDataRows.hs  SongsFunctions.hs  Utils.hs
